# current-albatross-deployer

./: .gitignore  .ocamlformat  CHANGES.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  current-albatross-deployer.opam  current-albatross-deployer.opam.locked  current-albatross.opam  current-deployer.opam  dune  dune-project  index.html
current-albatross-deployer/: index.html
current-albatross-deployer/Current_albatross_deployer/: index.html
current-albatross-deployer/Current_albatross_deployer/Config/: index.html
current-albatross-deployer/Current_albatross_deployer/Config/Pre/: index.html
current-albatross-deployer/Current_albatross_deployer/Deployed/: index.html
current-albatross-deployer/Current_albatross_deployer/Info/: index.html
current-albatross-deployer/Current_albatross_deployer/Port/: index.html
current-albatross-deployer/Current_albatross_deployer/Published/: index.html
current-albatross-deployer/Current_albatross_deployer/Unikernel/: index.html
current-albatross-deployer/Iptables_client/: index.html
current-albatross-deployer/Iptables_client/Deployments/: index.html
current-albatross-deployer/Iptables_client/IpManager/: index.html
current-albatross-deployer/Iptables_daemon_api/: index.html
current-albatross-deployer/Iptables_daemon_api/Rpc/: index.html
current-albatross-deployer/Iptables_daemon_api/Rpc/Tag/: index.html
current-albatross-deployer/Iptables_daemon_api/Spec/: index.html
current-albatross-deployer/Iptables_daemon_api/Spec/Deployments/: index.html
current-albatross-deployer/Iptables_daemon_api/Spec/IpManager/: index.html
current-albatross-deployer/Iptables_daemon_api/Types/: index.html
current-albatross-deployer/Iptables_daemon_api/Types/DeploymentInfo/: index.html
example/: dune  main.ml  stager.ml  stager.mli  test.ml  tls_hello.ml
lib/: albatross_deploy.ml  albatross_monitor.ml  client.ml  collect.ml  config.ml  current_albatross.mli  current_albatross_deployer.ml  current_albatross_deployer.mli  current_deployer.ml  current_deployer.mli  dune  ip.ml  publish.ml  unikernel.ml  unikernel.mli  utils.ml
lib/api/: current_deployer_api.ml  current_deployer_api.mli  dune
lib/cli/: dune  main.ml
lib/client/: current_deployer_client.ml  current_deployer_client.mli  dune  iptables_client.ml  iptables_client.mli
lib/current-deployer-daemon/: dune  main.ml
lib/current-deployer-daemon/packaging/Linux/: current_deployerd.service  current_deployerd.socket  install.sh
lib/example/: dune  main.ml  stager.ml  stager.mli  test.ml
lib/iptables/: dune  nat.ml  nat.mli
lib/iptables-api/: dune  iptables_daemon_api.ml  iptables_daemon_api.mli
lib/iptables-daemon/: dune  main.ml
lib/iptables-daemon/packaging/Linux/: current-iptables-daemon.service  current-iptables-daemon.socket  install.sh
lib/iptables/tests/: dune  nat.ml  test.ml
lib/libiptc/: dune  iptc.ml
(+2 files in other folders)
