(library
 (name current_albatross_deployer)
 (public_name current-albatross-deployer)
 (libraries
  current
  current_docker
  current.fs
  ipaddr
  str
  iptables_client
  obuilder-spec
  albatross)
 (preprocess
  (pps ppx_deriving.std ppx_deriving_yojson)))

(env
 (dev
  (flags
   (:standard -warn-error -A -w -40-4))))
